<resources>
    <string name="app_name">IRM Energy</string>
    <string name="title_activity_main">IRM Energy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="font_bold">POPPINS-BOLD.TTF</string>
    <string name="font_light">POPPINS-LIGHT.TTF</string>
    <string name="font_regular">POPPINS-REGULAR.TTF</string>
    <string name="font_semibold">POPPINS-SEMIBOLD.TTF</string>

</resources>
