<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <com.vbs.irmenergy.utilities.CustomTextview
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_45sdp"
                android:text="Forgot Your Password?"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_22sdp"
                app:fontName="@string/font_semibold" />

            <com.vbs.irmenergy.utilities.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:text="To recover your password, you need to enter\nyour registered email address.\nWe will sent recovery code to your email."
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp"
                app:fontName="@string/font_regular" />

            <com.vbs.irmenergy.utilities.CustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:background="@drawable/rounded_border_box"
                android:hint="Enter Email Id"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                app:fontName="@string/font_regular" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <com.vbs.irmenergy.utilities.CustomButton
            android:id="@+id/btn_send"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="45dp"
            android:layout_below="@+id/ll_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-22.5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="Send"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            app:fontName="@string/font_bold" />

    </RelativeLayout>

</ScrollView>