<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <com.vbs.irmenergy.utilities.CustomEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@drawable/rounded_border_box"
                android:hint="Enter Mobile No/Email Id"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                app:fontName="@string/font_regular" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="10dp"
                android:background="@drawable/rounded_border_box">

                <com.vbs.irmenergy.utilities.CustomEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/cb_pass"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:hint="Enter Password"
                    android:inputType="textPassword"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/_13sdp"
                    app:fontName="@string/font_regular" />

                <CheckBox
                    android:id="@+id/cb_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/password_selector" />

            </RelativeLayout>

            <com.vbs.irmenergy.utilities.CustomCheckBox
                android:id="@+id/check_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:buttonTint="@color/colorWhite"
                android:paddingLeft="5dp"
                android:text="Remember me"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                app:fontName="@string/font_regular" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <com.vbs.irmenergy.utilities.CustomButton
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="45dp"
            android:layout_below="@+id/ll_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-22.5dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            app:fontName="@string/font_bold" />

        <com.vbs.irmenergy.utilities.CustomTextview
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/_13sdp"
            app:fontName="@string/font_regular" />

    </RelativeLayout>

</ScrollView>