<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/profile_one" />

                <com.vbs.irmenergy.utilities.CustomTextview
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13sdp"
                    app:fontName="@string/font_regular" />

                <com.vbs.irmenergy.utilities.CustomTextview
                    android:id="@+id/tv_profile_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_11sdp"
                    app:fontName="@string/font_light" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.vbs.irmenergy.utilities.CustomEditText
                        android:id="@+id/et_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rectangle_border"
                        android:editable="false"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="@string/font_regular" />

                    <com.vbs.irmenergy.utilities.CustomTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@color/colorWhite"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="Email Id"
                        android:textColor="@color/colorLightBlack1"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="@string/font_semibold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.vbs.irmenergy.utilities.CustomEditText
                        android:id="@+id/et_profile_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rectangle_border"
                        android:editable="false"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="@string/font_regular" />

                    <com.vbs.irmenergy.utilities.CustomTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@color/colorWhite"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="Mobile No."
                        android:textColor="@color/colorLightBlack1"
                        android:textSize="@dimen/_12sdp"
                        app:fontName="@string/font_semibold" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>